<resources>
    <string name="app_name">SmartFarmTes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cuaca">Cuaca</string>
    <string name="tanaman">Tanaman</string>
    <string name="profile">Profile</string>
    <string name="format_email">Format email salah.</string>
    <string name="minimal_pw">Minimal password adalah 8 karakter.</string>
    <string name="contoh_gmail_com">contoh@gmail.com</string>
    <string name="username">Username</string>
    <string name="farmer_icon">Farmer Icon</string>
    <string name="logout_berhasil">Logout berhasil!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_login">Please, login with your registered account</string>
    <string name="password">Password</string>
    <string name="tampilkan_password">Tampilkan Password</string>
    <string name="login">Login</string>
    <string name="tv_question">Kamu belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create your new account</string>
    <string name="tv_question2">Kamu sudah memiliki akun?</string>
</resources>